[gd_scene load_steps=14 format=2]

[ext_resource path="res://gameplay/MENU/saveslot/contract.png" type="Texture" id=1]
[ext_resource path="res://gameplay/assets/fonts/hf-free-complete/expression-pro-v1.1/ExpressionPro.otf" type="DynamicFontData" id=2]
[ext_resource path="res://gameplay/MENU/saveslot/Confirm.png" type="Texture" id=3]
[ext_resource path="res://gameplay/MENU/saveslot/contract.gd" type="Script" id=4]
[ext_resource path="res://gameplay/MENU/saveslot/pressConfirm.png" type="Texture" id=5]
[ext_resource path="res://gameplay/MENU/buttonBase/buttonMenu.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 6 )
region_rect = Rect2( 144, 0, 48, 64 )
margin_left = 17.0
margin_right = 16.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id=12]
Button/styles/focus = SubResource( 11 )
Button/styles/hover = SubResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
extra_spacing_top = -4
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 56 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture/Control/confirm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture/Control/TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.52588e-05, -259 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture/Control/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texture/Control/TextureRect:texture:region")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 24, 56 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "confirmed"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("texture/Control/confirm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture/Control/TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.65 ),
"transitions": PoolRealArray( 2.82843, 2.54913, 0.517632, 1 ),
"update": 0,
"values": [ Vector2( -1.99998, -402 ), Vector2( -1.99998, -402 ), Vector2( -2, -400 ), Vector2( -2, -500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture/Control/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texture/Control/TextureRect:texture:region")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 24, 224 ), Rect2( 24, 0, 24, 224 ), Rect2( 48, 0, 24, 224 ), Rect2( 72, 0, 24, 224 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "playSFX"
} ]
}

[node name="contract" type="TextureButton"]
rect_min_size = Vector2( 272, 406 )
theme = SubResource( 12 )
toggle_mode = true
expand = true
script = ExtResource( 4 )

[node name="texture" type="TextureRect" parent="."]
margin_right = 272.0
margin_bottom = 406.0
rect_min_size = Vector2( 272, 406 )
texture = ExtResource( 1 )
expand = true

[node name="name" type="Label" parent="texture"]
margin_left = 34.0
margin_top = 96.0
margin_right = 238.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.258824, 0.227451, 0.372549, 1 )
custom_fonts/font = SubResource( 5 )
text = "Rodolfo"

[node name="world" type="Label" parent="texture"]
margin_left = 34.0
margin_top = 176.0
margin_right = 238.0
margin_bottom = 228.0
custom_colors/font_color = Color( 0.258824, 0.227451, 0.372549, 1 )
custom_fonts/font = SubResource( 6 )
text = "Sand Desert"
valign = 2

[node name="Control" type="Control" parent="texture"]
margin_left = 194.0
margin_top = 338.0
margin_right = 234.0
margin_bottom = 378.0

[node name="confirm" type="TextureRect" parent="texture/Control"]
visible = false
margin_right = 44.0
margin_bottom = 44.0
rect_min_size = Vector2( 44, 44 )
rect_pivot_offset = Vector2( 22, 22 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="texture/Control"]
visible = false
margin_left = 1.52588e-05
margin_top = -259.0
margin_right = 48.0
margin_bottom = 189.0
rect_min_size = Vector2( 48, 448 )
texture = SubResource( 10 )
expand = true

[node name="select" type="NinePatchRect" parent="texture"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 6 )
region_rect = Rect2( 144, 0, 48, 64 )
patch_margin_left = 16
patch_margin_top = 8
patch_margin_right = 16
patch_margin_bottom = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/confirmed = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_contract_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_contract_focus_exited"]
[connection signal="toggled" from="." to="." method="_on_contract_toggled"]
